Create toket service, create server logs, create elementary game logic

--- a/Крестики-Нолики.ini
+++ b/Крестики-Нолики.ini
@@ -10,3 +10,6 @@
 - WebSocket (Socket IO)
 - Переходы состояния при игре должны быть реализованы при помощи State Machine
 - TS - up 2 you
+
+
+Создать поле у двух юзеро с сесией игры
